--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
-    "webpack": "^5.40.0",
-    "webpack-cli": "3.3.12",
     "yarn": "^1.22.4"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "webpack": "^5.40.0",
+    "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   }
 }
