--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack": "4.46.0",
+    "webpack": "^5.40.0",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "^3.11.2"
   }
