--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "version": "0.1.0",
   "devDependencies": {
     "webpack": "^5.40.0",
-    "webpack-cli": "3.3.12",
+    "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   }
 }
