--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "css-what": "^5.0.1",
     "g": "^2.0.1",
     "jquery": "^3.6.0",
-    "node-sass": "^6.0.0",
+    "node-sass": "^4.14.1",
     "normalize-url": "^6.1.0",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
@@ -23,6 +23,7 @@
     "babel": "^5.8.38",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
+    "gulp-sass": "^4.1.0",
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
