--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-sass": "^4.1.0",
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2",
+    "webpack-command": "^0.5.1",
     "webpack-dev-server": "^3.11.2"
   }
 }
