--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@types/lodash": "^4.14.170",
     "babel": "^5.8.38",
     "babel-core": "^6.23.0",
     "babel-loader": "^8.2.2",
     "gulp-sass": "^4.1.0",
     "webpack": "5.40.0",
-    "webpack-cli": "4.7.2",
+    "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   },
   "description": "This README would normally document whatever steps are necessary to get the\r application up and running.",
