--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "normalize-url": "^6.1.0",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
-    "webpack-cli": "^4.7.2",
     "yarn": "^1.22.4"
   },
   "version": "0.1.0",
@@ -30,7 +29,8 @@
     "babel-core": "^6.23.0",
     "babel-loader": "^8.2.2",
     "gulp-sass": "^4.1.0",
-    "webpack": "5.40.0",
+    "webpack": "^5.40.0",
+    "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   },
   "description": "This README would normally document whatever steps are necessary to get the\r application up and running.",
