--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "normalize-url": "^6.1.0",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
-    "yarn": "^1.22.4"
+    "yarn": "^1.22.4",
+    "webpack": "^5.40.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "version": "0.1.0",
   "devDependencies": {
@@ -28,10 +31,8 @@
     "babel": "^5.8.38",
     "babel-core": "^6.23.0",
     "babel-loader": "^8.2.2",
-    "gulp-sass": "^4.1.0",
-    "webpack": "^5.40.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "gulp-sass": "^4.1.0"
+ 
   },
   "description": "This README would normally document whatever steps are necessary to get the\r application up and running.",
   "main": ".pnp.js",
