--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
     "fibers": "^4.0.3",
     "g": "^2.0.1",
     "jquery": "^3.6.0",
+    "laravel-mix": "^6.0.0-beta.17",
     "lodash": "^4.17.21",
     "node-gyp": "^8.1.0",
     "node-sass": "^4.14.1",
     "normalize-url": "^6.1.0",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
-    "yarn": "^1.22.4",
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "yarn": "^1.22.4"
   },
   "version": "0.1.0",
   "devDependencies": {
@@ -32,7 +33,6 @@
     "babel-core": "^6.23.0",
     "babel-loader": "^8.2.2",
     "gulp-sass": "^4.1.0"
- 
   },
   "description": "This README would normally document whatever steps are necessary to get the\r application up and running.",
   "main": ".pnp.js",
