--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "babel-core": "^6.23.0",
     "babel-loader": "^8.2.2",
     "gulp-sass": "^4.1.0",
-    "webpack": "^5.40.0",
-    "webpack-cli": "^4.7.2"
+    "webpack": "4.46.0",
+    "webpack-cli": "3.3.12"
   },
   "description": "This README would normally document whatever steps are necessary to get the\r application up and running.",
   "main": ".pnp.js",
